<resources>
    <string name="app_name">TipCalculatorApp</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="ebc">Enter Bill amount in rupees</string>
    <string name="calc">Calculate</string>
    <string name="BillAmt">Bill Amount is </string>
    <string name="TipAmt">Tip amount is</string>
    <string name="TipPerc">Select tip percentage</string>
    <string name="Null" />
    <string name="todo">TODO</string>
    <string name="tca">Tip Calculator App</string>
    <string name="or_enter_manually">or Enter manually</string>
</resources>