<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".final_screen">
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginBottom="212dp"
        android:gravity="center_horizontal"
        android:text="@string/BillAmt"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textColorHighlight="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/billamt"
        android:layout_width="220dp"
        android:layout_height="91dp"
        android:gravity="center_horizontal"
        android:text="@string/Null"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tipamt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/TipAmt"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textColorHighlight="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:id="@+id/tipamt"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:gravity="center_horizontal"
        android:text="@string/Null"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />
</androidx.constraintlayout.widget.ConstraintLayout>
